--- a/workspaces/shared/Brewfile
+++ b/workspaces/shared/Brewfile
@@ -12,6 +12,7 @@ brew "ripgrep"
 brew "starship"  # terminal prompt
 brew "tldr"      # simple man
 brew "tree"
+brew "zsh-syntax-highlighting"
 
 # terminal fonts
 cask "font-iosevka-term-nerd-font"
