--- a/workspaces/shared/Brewfile
+++ b/workspaces/shared/Brewfile
@@ -4,6 +4,7 @@ brew "fx"        # interactive JSON browser
 brew "gh"        # GitHub CLI
 brew "git"
 brew "git-delta" # better diff for git
+brew "gng"       # smart gradle command, uses wrapper or falls back to installed
 brew "jq"
 brew "lsd"       # better ls
 brew "micro"     # simple editor
