--- a/workspaces/shared/Brewfile
+++ b/workspaces/shared/Brewfile
@@ -23,6 +23,7 @@ cask "font-iosevka-term-nerd-font"
 cask "font-iosevka-term-slab-nerd-font"
 
 cask "jetbrains-toolbox"
+cask "obsidian"
 
 mas "Pixelmator Pro", id: 1289583905
 mas "Magnet", id: 441258766
