--- a/workspaces/shared/symlinks/iterm/.iterm2/com.googlecode.iterm2.plist
+++ b/workspaces/shared/symlinks/iterm/.iterm2/com.googlecode.iterm2.plist
@@ -2056,6 +2056,8 @@
 			</dict>
 			<key>Mouse Reporting</key>
 			<true/>
+			<key>Movement Keys Scroll Outside Interactive Apps</key>
+			<false/>
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
@@ -2168,6 +2170,8 @@
 			<string>xterm-256color</string>
 			<key>Transparency</key>
 			<real>0.0</real>
+			<key>Treat Option as Alt</key>
+			<false/>
 			<key>Unicode Version</key>
 			<integer>8</integer>
 			<key>Unlimited Scrollback</key>
