configure python, go, and remote workspaces

--- a/workspaces/work/Brewfile
+++ b/workspaces/work/Brewfile
@@ -8,6 +8,8 @@ brew "ykman"
 brew "nvm"
 brew "gnu-tar"
 brew "pyenv"
+brew "bison"
+brew "go"
 
 # See https://developers.a.musta.ch/docs/default/component/frontend/getting-started/#nvm-node-yarn-homebrew-bazel
 brew "cmake"
