git config & k8s tools

--- a/workspaces/work/Brewfile
+++ b/workspaces/work/Brewfile
@@ -10,6 +10,8 @@ brew "gnu-tar"
 brew "pyenv"
 brew "bison"
 brew "go"
+brew "kubectx"
+brew "golangci-lint"
 
 # See https://developers.a.musta.ch/docs/default/component/frontend/getting-started/#nvm-node-yarn-homebrew-bazel
 brew "cmake"
