--- a/workspaces/work/Brewfile
+++ b/workspaces/work/Brewfile
@@ -33,7 +33,9 @@ cask "corretto@11"
 cask "corretto@17"
 cask "corretto@21"
 
+cask "1password"
 cask "asana"
 cask "docker"
+cask "google-chrome"
 cask "postman"
 cask "visual-studio-code"
