--- a/workspaces/shared/Brewfile
+++ b/workspaces/shared/Brewfile
@@ -1,4 +1,5 @@
 tap "gdubw/gng"
+tap "BalliAsghar/apps"
 
 brew "bat"       # better cat
 brew "broot"     # interactive tree
@@ -10,6 +11,7 @@ brew "git"
 brew "git-delta" # better diff for git
 brew "gng"       # smart gradle command, uses wrapper or falls back to installed
 brew "jq"
+brew "killport"
 brew "lazygit"   # terminal GUI for git
 brew "lsd"       # better ls
 brew "micro"     # simple editor
